# EHU

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
CA/C_PREPARATION/: C1  C1.c  C10.c  C7  C7.c  Test  Test.c
CA/LAB_C01/: a.out  main  main.c
CA/Lab_CA/: Ass1  Ass1.c  Ass2  Ass2.c  Ass4  Ass4.c  Ass8  Ass8.c  Directives  conversion.c  directives.c  facto.c  radius.c  radius0.c
CA/cache_simulator/: Cargo.toml
EC/G13/: G13.arm9  G13.nds
EC/NO$GBA.2.6a/: No$GBA.com.URL
EC/Plantilla1718/: Plantilla1718.arm9  Plantilla1718.nds
EC/ProyectoEC/: CMakeLists.txt  ProyectoEC.arm9  ProyectoEC.nds
EC/ProyectoEC/include/: auxiliares.h  defines.h  juego.h  nds.h  temporizadores.h
EC/ProyectoEC/source/: auxiliares.c  juego.c  main.c  rutserv.c  sprites.c  teclado.c  temporizadores.c
EDA/Arboles2/: .project
EDA/EDA-01/: .project
EDA/EDA-02/: .project
EDA/EDA-Programas/: .project
EDA/EjercicioCorro/: .project
EDA/SainzDeLaMaza.Gamboa.Unai/: .project
MP/LAB_001/: Ver_Contiene_a.adb  Ver_Dar_La_Vuelta.adb  Ver_Num_Apariciones_a.adb  Ver_Potencia.adb  Ver_Substring_aa.adb  ver_contiene_a  ver_contiene_a.ali  ver_dar_la_vuelta  ver_dar_la_vuelta.ali  ver_num_apariciones_a  ver_num_apariciones_a.ali  ver_potencia  ver_potencia.ali  ver_substring_aa  ver_substring_aa.ali
MP/LAB_001_Opt/: Ver_Contiene_Caracter.adb  Ver_Dicotomica.adb  Ver_Enesima_Potencia.adb  Ver_Numero_Apariciones_Opcional.adb  Ver_Substring_Opcional.adb  Ver_Tipo_Vector.adb  ver_contiene_caracter  ver_contiene_caracter.ali  ver_dicotomica  ver_enesima_potencia  ver_enesima_potencia.adb  ver_enesima_potencia.ali  ver_numero_apariciones_opcional  ver_numero_apariciones_opcional.ali  ver_substring_opcional  ver_substring_opcional.ali  ver_tipo_vector
OR/: .RData  .Rhistory  03_lab_Solving_Linear_models_by_Brute_Force.Rmd  04_lab_Solving_Linear_models_by_Brute_Force_2.Rmd  Lab3_UnaiSainz.Rmd  Lab3_UnaiSainz.tex  Lab4_UnaiSainz.Rmd  Lab4_UnaiSainz.tex  Lab5_UnaiSainz.Rmd  Lab6_UnaiSainz.Rmd  Lab7_UnaiSainz.Rmd  Lab7_UnaiSainz.tex  N-be75eec_30.txt  ins20a.tsp  model_exercise_12.lp
PMOO/PRACTICA_JAVA/: .classpath  .project  productosP.txt
RUST/tetris/: Cargo.toml
(+402 files in other folders)
